[package]
name = "oau-InterDocRep"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
url = "2.5"
urlencoding = "2.1"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
time = "0.3"
uuid = { version = "1.0", features = ["v4"] }
oauth2 = "4.0"
axum-jwks = "0.12"
openidconnect = "4.0"
csv = "1.3"
toml = "0.8"
google-drive3 = "5.0"
google-sheets4 = "5.0"
yup-oauth2 = "9.0"
hyper = "0.14"
hyper-rustls = "0.24"
bytes = "1.0"
chrono = "0.4"
